# Particle-Collision-System-Represented-as-a-Distributed-System

./: Dockerfile  Makefile  README.md  check_ports.py
nodes/master_node/: CMakeLists.txt
nodes/master_node/Core_Library/src/archive/: archive.c++
nodes/master_node/Core_Library/src/node_declarations/: master_node.c++  worker_node_member.c++
nodes/master_node/Core_Library/src/utils/: Dockerfile  point.c++
nodes/master_node/Core_Library/src/worker_node_setup/: create_docker_command.c++  execute_system_command.c++  find_central_point_of_new_worker_node.c++  get_network_ports.c++
nodes/worker_node/src/: lib.rs  main.rs
nodes/worker_node/src/node_management/: node_creation.rs  node_server.rs
nodes/worker_node/src/physics_logic/: collision.rs  particle.rs  space.rs
nodes/worker_node/src/utils/: env_vars.rs  mod.rs  type_check.rs
